<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Newspapr</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>



    <string name="menu_settings">More</string>
    <string name="share_text">Witness Barney Stinson\'s most awesome moments now. Everywhere. Knowing how much you love Barney Stinson, we collected hundreds of audio recordings of his most awesome moments.
A clear and eye-pleasing layout emphasizes this app\'s quality.\n\nDon\'t hesitate and test this amazing Android app now:\nhttps://play.google.com/store/apps/details?id=com.troubi.barneystinsonsoundboard</string>
    <string name="share_subject">Barney Stinson Soundboard. Only for Android.</string>

    <string name="ad_id">a14fa513dea6849</string>
    <string name="category_suits">Suits</string>
    <string name="category_awesomeness">Awesomeness</string>
    <string name="category_legendary">Legendary</string>
    <string name="category_highfive">High five</string>
    <string name="category_haveyoumet">Have you met&#8230;</string>
    <string name="category_bestfriend">Best friend</string>
    <string name="category_misc">Other</string>
    <string name="category_music">Music</string>
    <string name="category_coming_soon">The Bro Code</string>
    <string name="dialog_about_message">All snippets are from the tv-series \"How I Met Your Mother.\"\nThe developers of this app did not create this content.</string>
    <string name="dialog_setassound_title">Set this sound as&#8230;</string>

</resources>
