<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="3dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.54" >

            <Button
                android:id="@+id/main_category_button_awesomeness"
                style="@style/CategoryButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_default_holo_light_blue"
                android:text="@string/category_awesomeness" />

            <Button
                android:id="@+id/main_category_button_legendary"
                style="@style/CategoryButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.00"
                android:background="@drawable/btn_default_holo_light_green"
                android:text="@string/category_legendary" />
        </LinearLayout>

        <Button
            android:id="@+id/main_category_button_highfive"
            style="@style/CategoryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_highfive"
            android:background="@drawable/btn_default_holo_light_orange" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="99dp" >

            <Button
                android:id="@+id/main_category_button_bestfriend"
                style="@style/CategoryButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/category_bestfriend"
                android:background="@drawable/btn_default_holo_light_purple" />

            <Button
                android:id="@+id/main_category_button_haveyoumet"
                style="@style/CategoryButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/category_haveyoumet"
                android:background="@drawable/btn_default_holo_light_red" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/main_category_button_suits"
                    style="@style/CategoryButton"
                    android:layout_width="match_parent"
                    android:layout_height="152dp"
                    android:text="@string/category_suits"
                    android:background="@drawable/btn_default_holo_light_blue"/>

                <Button
                    android:id="@+id/main_category_button_misc"
                    style="@style/CategoryButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/category_misc"
                    android:background="@drawable/btn_default_holo_light_green" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/main_category_button_music"
                    style="@style/CategoryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_music"
                    android:background="@drawable/btn_default_holo_light_orange"/>

                <Button
                    android:id="@+id/main_category_coming_soon"
                    style="@style/CategoryButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/category_coming_soon"  />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>